--- a/Frontend/add_branch_and_product.ui
+++ b/Frontend/add_branch_and_product.ui
@@ -569,7 +569,7 @@ QLineEdit:hover {
             <property name="maximumSize">
              <size>
               <width>16777215</width>
-              <height>16777215</height>
+              <height>0</height>
              </size>
             </property>
             <property name="font">
@@ -742,7 +742,7 @@ background-color: rgb(255, 255, 255);
            </widget>
           </item>
           <item>
-           <widget class="ClickableLabel" name="update_and_add_label">
+           <widget class="ClickableLabel" name="branch_update_and_add_label">
             <property name="maximumSize">
              <size>
               <width>16777215</width>
@@ -753,6 +753,9 @@ background-color: rgb(255, 255, 255);
              <font>
               <pointsize>10</pointsize>
              </font>
+            </property>
+            <property name="cursor">
+             <cursorShape>PointingHandCursor</cursorShape>
             </property>
             <property name="text">
              <string>Update branch info? Click here</string>
@@ -1017,7 +1020,7 @@ QComboBox QAbstractItemView::item:hover {
             <property name="maximumSize">
              <size>
               <width>16777215</width>
-              <height>16777215</height>
+              <height>0</height>
              </size>
             </property>
             <property name="font">
@@ -1150,30 +1153,30 @@ QComboBox QAbstractItemView::item:hover {
        <item>
         <widget class="QFrame" name="product_btn_frame">
          <property name="styleSheet">
-          <string notr="true">#branch_btn_frame {
+          <string notr="true">#product_btn_frame {
 background-color: rgb(255, 255, 255);
 }
-#update_and_add_button {
+#product_update_and_add_button {
 	border: 2px solid rgb(197, 197, 197);
 	border-radius: 3px;
 	background-color: rgb(213, 213, 213);
 	color: rgb(65, 65, 65);
 }
-#update_and_add_button:hover {
+#product_update_and_add_button:hover {
 	border: 2px solid rgb(107, 107, 107);
 }
-#update_and_add_button:pressed{
+#product_update_and_add_button:pressed{
 	border: 2px solid rgb(107, 107, 107);
 	background-color: rgb(144, 144, 144);
 }
-#update_and_add_label {
+#product_update_and_add_label {
 	color: rgb(0, 0, 0);
 }
-#update_and_add_label:hover {
-	color: rgb(126, 126, 126);
+#product_update_and_add_label {
+	color: rgb(0, 0, 0);
 }
-#update_and_add_label:pressed {
-	color: rgb(115, 115, 115)
+#product_update_and_add_label:hover {
+	color: rgb(126, 126, 126);
 }</string>
          </property>
          <property name="frameShape">
@@ -1184,7 +1187,7 @@ background-color: rgb(255, 255, 255);
          </property>
          <layout class="QVBoxLayout" name="verticalLayout_7">
           <item>
-           <widget class="QPushButton" name="product_and_add_button">
+           <widget class="QPushButton" name="product_update_and_add_button">
             <property name="minimumSize">
              <size>
               <width>0</width>
@@ -1202,7 +1205,7 @@ background-color: rgb(255, 255, 255);
            </widget>
           </item>
           <item>
-           <widget class="ClickableLabel" name="product_and_add_label">
+           <widget class="ClickableLabel" name="product_update_and_add_label">
             <property name="maximumSize">
              <size>
               <width>16777215</width>
@@ -1213,6 +1216,9 @@ background-color: rgb(255, 255, 255);
              <font>
               <pointsize>10</pointsize>
              </font>
+            </property>
+            <property name="cursor">
+             <cursorShape>PointingHandCursor</cursorShape>
             </property>
             <property name="text">
              <string>Update product info? Click here</string>
